--- a/views/osnovna_stran.html
+++ b/views/osnovna_stran.html
@@ -1,8 +1,42 @@
 % rebase('Kalodont/views/base.html')
 
-<h1>Kalodont</h1>
-<h2>igra za preganjanje prostega časa in izgubljanje živcev</h2>
-
-<form action='/nova_igra/' method='post'>
-  <button class='button is-info' type='submit'>Nova igra</button>
-</form>
+<div class="level-item has-text-centered">
+  <figure>
+    <img src="https://marketingmreza.rs/wp-content/uploads/2012/11/kalodont-veca-532x227.jpg">
+  </figure>
+</div>
+<div class="level-item has-text-centered">
+  <object class="box" width="800" style="margin: 20px;">
+    <div class="content is-medium">
+      <p>
+        Kalodont je južnoslovanska besedna igra, kjer igralci
+        zaporedoma izbirajo besede, katere se začnejo na zadnji
+        črki prejšnje besede. Ime je dobila po
+        jugoslovanskem proizvajalcu zobnih past Kalodont, saj v
+        južnoslovanskih jezikih beseda, ki bi se začela na "<i>nt</i>", ne obstaja.
+      </p>
+    </div>
+  </object>
+</div>
+<div class="level-item">
+  <object class="notification" width="800" style="margin: 20px;">
+    <div class="content">
+      <h1>Pravila</h1>
+      <p>Pravila igre so preprosta. Beseda, ki jo vneseš v polje se
+        mora začeti na <b>zadnji dve</b> črki prejšnje besede (da je zadeva olajšana,
+        računalnik že sam izpiše zadnji dve črki). Beseda, ki jo vneseš seveda
+        <b>mora obstajati</b>, prav tako pa ne sme biti osebno ali geografsko ime.
+        Vsako besedo lahko uporabiš <b>le enkrat</b>, v nasprotnem primeru te računalnik
+        opozori, da je bila beseda že uporabljena.
+        Zmaga tisti, ki prvi reče "<i>kalodont</i>", tako da pazi, da ne izbereš besede, ki se konča na "<i>ka</i>".
+        Če nove besede ne najdeš, imaš na voljo možnost predaje s klikom na gumb <i>Predaja</i>.
+      </p>
+      <p>Igro pričneš s klikom na gumb <i>nova igra</i>, in <b>prvi</b> vneseš poljubno besedo.</p>
+    </div>
+  </object>
+</div>
+<div class="level-item has-text-centered">
+  <form action='/nova_igra/' method='post'>
+    <button class='button is-warning is-medium is-fullwidth is-rounded is-hover' type='submit'><b>Nova igra</b></button>
+  </form>
+</div>
