--- a/views/base.html
+++ b/views/base.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Kalodont</title>
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css'>
-    <script defer src='https://use.fontawesome.com/releases/v5.3.1/js/all.js'></script>
-</head>
 <html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Kalodont</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+</head>
+
 <body>
-    <object class="navbar is-dark" style="margin-bottom: 20px;">
+    <nav class="navbar is-dark">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item" href="http://127.0.0.1:8080/">
-                    <strong>Kalodont</strong><small>&nbsp- igra za širjenje besednega zaklada</small>
-                </a>
+                <span class="navbar-item">
+                    <b style="font-size: 14pt;">Kalodont</b><small>&nbsp- igra za širjenje besednega zaklada</small>
+                </span>
             </div>
             <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        % if uporabnisko_ime:
+                        <form method="POST" action="/odjava/">
+                            <button class="button is-light">
+                                Odjavi se
+                            </button>
+                        </form>
+                        % else:
+                        <a class="button is-danger" href="/registracija/">
+                            <strong>Registriraj se</strong>
+                        </a>
+                        <a class="button is-light" href="/prijava/">
+                            Prijavi se
+                        </a>
+                        % end
+                    </div>
+                </div>
                 <a class="navbar-item" href="https://github.com/majcufer/Kalodont">
                     <span class="icon">
                         <i class="fab fa-github"></i>
@@ -26,8 +44,8 @@
                 </a>
             </div>
         </div>
-    </object>
-    <section class='container'>
+    </nav>
+    <section class="section">
         {{!base}}
     </section>
 </body>
