--- a/views/zmaga.html
+++ b/views/zmaga.html
@@ -13,7 +13,7 @@
             <button class='button is-warning is-medium is-rounded is-hover' type='submit'
                 style="margin:20px"><b>Nova igra</b></button>
         </form>
-        <form action='/' method='get'>
+        <form action='/osnovna/' method='get'>
             <button class='button is-dark is-medium is-rounded is-hover' type='submit'
                 style="margin:20px"><b>Izhod</b></button>
         </form>
