zamenjani apostrofi/narekovaji

--- a/views/igra.html
+++ b/views/igra.html
@@ -1,6 +1,6 @@
 % import model
 % import bottle
-% rebase('Kalodont/views/base.html')
+% rebase("views/base.html")
 
 
 <div class="container has-text-centered">
@@ -74,8 +74,8 @@
 
                     % end
 
-                    <form action='/osnovna/' method='get'>
-                        <button class='button is-dark is-medium is-rounded is-hover' type='submit'
+                    <form action="/osnovna/" method="get">
+                        <button class="button is-dark is-medium is-rounded is-hover" type="submit"
                             style="margin:20px"><b>Predaja</b></button>
                     </form>
                 </div>
