--- a/views/zmaga.html
+++ b/views/zmaga.html
@@ -1,5 +1,5 @@
 % import model
-% rebase('Kalodont/views/base.html')
+% rebase("views/base.html")
 
 
 <div class="level-item has-text-centered" style="color: rgb(64, 191, 47); font-size: 120px; font-family:Arial">
@@ -9,12 +9,12 @@
     <object class="subtitle is-4" style="margin-top: 40px;">Premagal si računalnik! Prvi si rekel "<i>kalodont</i>".</object>
 </div>
 <div class="level-item has-text-centered" style="margin-top:40px">
-        <form action='/nova_igra/' method='post'>
-            <button class='button is-warning is-medium is-rounded is-hover' type='submit'
+        <form action="/nova_igra/" method="post">
+            <button class="button is-warning is-medium is-rounded is-hover" type="submit"
                 style="margin:20px"><b>Nova igra</b></button>
         </form>
-        <form action='/osnovna/' method='get'>
-            <button class='button is-dark is-medium is-rounded is-hover' type='submit'
+        <form action="/osnovna/" method="get">
+            <button class="button is-dark is-medium is-rounded is-hover" type="submit"
                 style="margin:20px"><b>Izhod</b></button>
         </form>
 </div>
